# valore-nil-simulation

./: .env.template
Background/: context brief.md  multi-agentic NIL.md  nil-poc-simulation-approach.md  nil-poc-simulation-data-spec.md  paper.md  sharon poc application.md
Background/simulation/public/: index.html
Simulation2/: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md  emulation-alignment-assessment.md  env.production.example  simulation2-approach.md  simulation2-backlog.md  synthetic-emulation-plan.md
Simulation2/agents/: base.py  mock_agents.py
Simulation2/api/: Dockerfile  pyproject.toml
Simulation2/api/app/: main.py
Simulation2/api/app/core/: config.py
Simulation2/api/app/routers/: __init__.py  athletes.py  metrics.py  narratives.py  programs.py  scenarios.py  synthetic.py
Simulation2/api/app/schemas/: athlete.py  metrics.py  program.py  scenario.py
Simulation2/api/app/services/: agent_stream.py  data_provider.py  mock_data.py  narrative.py
Simulation2/api/app/synthetic/: __init__.py  engine.py
Simulation2/api/tests/: test_programs.py
Simulation2/docs/: README.md  data-sources-and-flows.md  nil-behavioral-theory.md  restart-checklist.md  system-architecture.md  technical-operations.md
Simulation2/infra/: docker-compose.yml
Simulation2/ui/: Dockerfile  package-lock.json  package.json
Simulation2/ui/app/: page.tsx
Simulation2/ui/components/: AgentStream.tsx  DashboardTabs.tsx  ExperienceDashboard.tsx  NarrativePanel.tsx
docs/: nil-poc-simulation-backlog.md  nil-poc-simulation-storyboard.md
openai/: gpt-5.md
(+12 files in other folders)
